forgot to add footer

--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
         
     </main>
     
-    <footer></footer>
+    <footer>
+        <p>Website by Alyssa Kongswangwongsa</p>
+    </footer>
 </body>
 </html>
